appl/services/shared/apps/tenant-management/k8s/template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tenant-management
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tenant-management
  template:
    metadata:
      labels:
        app: tenant-management
    spec:
      containers:
        - name: tenant-management
          image: 754173030316.dkr.ecr.ap-northeast-2.amazonaws.com/tenant-management-service-20220917091059:111
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
              name: "http"
---
apiVersion: v1
kind: Service
metadata:
  name: tenant-management-service
spec:
  selector:
    app: tenant-management
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3001
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tenant-management-service-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/mergeable-ingress-type: "minion"
spec:
  rules:
    - host: api.abp-psa.online
      http:
        paths:
          - backend:
              service:
                name: tenant-management-service
                port:
                  number: 80
            path: /api/tenants
            pathType: Prefix
